@@ -5,3 +5,6 @@ This is a bot to cheat on the [Jetpunk Countries of the World Quiz]("https://www
 ## Note
 Must be compiled and ran with jdk 17.0.3, check version with `javac -version` and `java -version`.<br>
 This is important because java.locale has minor changes between versions, such as Macau changing to Macao from 17.0.2 to 17.0.3.
+
+## Running
+You can use the included `run.bat` file or use `java -jar --enable-preview JetpunkBot.jar` from the root directory.
